<resources>
    <string name="app_name">SenaSoft2021New</string>
    <string name="title_activity_inicio">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_me">Registrarme</string>
    <string name="name">Nombre</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="generate_qr">Generar Qr</string>
    <string name="login">Login</string>
    <string name="no_tengo_cuenta">No tengo cuenta</string>
    <string name="login_as_admin">Ingresar como administrador</string>
    <string name="ingresar">Ingresar</string>
    <string name="admin">Administrador</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_events">No hay eventos registrados</string>
    <string name="create_event">Registrar evento</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="select_start_date">Selecciona la fecha de inicio</string>
    <string name="select_end_date">Selecciona la fecha de finalización</string>
    <string name="seleccionar_imagen">Insertar imagen</string>
    <string name="en_que_podemos_ayudarte">En que podemos ayudarte</string>
    <string name="tu_denuncia">Tu denuncia</string>
<<<<<<< HEAD
    <string name="quienes_somos">Quienes somos?</string>
    <string name="contenidoapp">En su firme propósito de continuar trabajando para garantizar a las mujeres una vida libre de violencias y en el marco de la celebración del Día de la NO Violencia contra la Mujer,
        SenaSoftNew se une a esta iniciativa.
        Sabemos el grado de violencia contra la mujer que se ha venido presentando en los ultimos años, por este motivpo SenaSoftNew pone a dispocicion sus lienas de
        atencion inmendiata, brindamos la atencion las 24 horas del dia, todos los dias de las semana, las personas que prensenten algun caso de violencia
        puede enviarnos en el momento justo que se presenta la situación en tan solo unos pasos.
    </string>
    <string name="nuestros_servicios">Nuestros Servicios</string>
    <string name="servicios">
        En nuestra app tienes a disposición el envio de ayuda a nuestros canales de atencíon, tambien encontraras eventos de tu posible interes
        Podrás encontrarnos facilmente con el servicio de mapa que tienes a tu disposición en la sección de ubicación.
    </string>
    <string name="compenecia">Has volar tu imaginacion, plasma tus mejores ideas, compartela con nosotros y participa por maravillosos premios</string>
=======
    <string name="mis_denuncias">Mis denuncias</string>
    <string name="no_denuncias">No hay denuncias registradas</string>
    <string name="open_camera">Abrir Camara</string>
    <string name="open_gallery">Abrir Galeria</string>
    <string name="send">Send</string>
    <string name="events">Eventos</string>
    <string name="locations">Ubicaciones</string>
>>>>>>> 53f8d7b6693eea1a42770b0f9b043c0560e2387b
</resources>